<resources>
    <string name="app_name">MUICApp</string>
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="about_app">This application is an attempt to test my personal skills in creating Material UI Components. You can use this samples as a reference for your work.</string>
    <string name="github">GitHub</string>
    <string name="about">About</string>
    <string name="muic">Material UI Components</string>
    <string name="basic_buttons">Basic Buttons</string>
    <string name="standard">Standard</string>
    <string name="primary">Primary</string>
    <string name="secondary">Secondary</string>
    <string name="disabled">Disabled</string>
    <string name="floating_action_buttons">Floating Action Buttons</string>
    <string name="buttons_custom">Buttons Custom</string>
    <string name="play">Play</string>
    <string name="stop">Stop</string>
    <string name="accept">Accept</string>
    <string name="retry">Retry</string>
    <string name="click_for_more">Click for more</string>
    <string name="switch_text">Switch text</string>
    <string name="snackbars">Snackbars</string>
    <string name="simple">Simple</string>
    <string name="with_action">With action</string>
    <string name="with_action_indefinite">With action indefinite</string>
    <string name="toasts">Toasts</string>
    <string name="custom">Custom</string>
    <string name="custom_with_icon">Custom with icon</string>
    <string name="custom_toast">Custom toast</string>
    <string name="card_light">Card Light</string>
    <string name="card_dark">Card Dark</string>
    <string name="card_image">Card Image</string>
    <string name="error">Error</string>
    <string name="success">Success</string>
    <string name="info">Info</string>
    <string name="some_error_appeared">Some error appeared</string>
    <string name="some_info_text_here">Some info text here</string>
    <string name="captain_sinbad">Captain Sinbad</string>
    <string name="contact_added">Contact was added</string>
    <string name="toast_image_title">Toast with Android</string>
    <string name="toast_image_message">Well done!</string>
    <string name="center">Center</string>
    <string name="custom_snack_message">You have successfully summoned custom sncakbar with android! Well done!</string>
    <string name="top_rating">Top Rating</string>
    <string name="more">More</string>
    <string name="afterburner">Afterburner</string>
    <string name="dance_gavin_dance">Dance Gavin Dance</string>
    <string name="posthardcore">posthardcore</string>
    <string name="recommended">Recommended</string>
    <string name="new_releases">New Releases</string>
    <string name="source_domain_com">Source: Domain.com</string>
</resources>