<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    tools:context=".ui.fragment.buttons.custom.ButtonsCustomFragment">

    <com.google.android.material.appbar.AppBarLayout
        android:id="@+id/appBarLayout"
        android:layout_width="match_parent"
        android:layout_height="wrap_content">

        <androidx.appcompat.widget.Toolbar
            android:id="@+id/toolbar"
            android:layout_width="match_parent"
            android:layout_height="wrap_content" />
    </com.google.android.material.appbar.AppBarLayout>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="@dimen/halfDimen"
        android:orientation="horizontal">

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginStart="@dimen/halfDimen"
            android:text="@string/buttons_custom" />

        <View
            style="@style/divider"
            android:layout_marginStart="@dimen/halfDimen"
            android:layout_marginTop="10dp"
            android:layout_marginEnd="@dimen/halfDimen"
            android:backgroundTint="@android:color/darker_gray" />
    </LinearLayout>

    <Button
        android:layout_width="120dp"
        android:layout_height="wrap_content"
        android:layout_gravity="center"
        android:layout_marginTop="@dimen/defDimen"
        android:background="@drawable/ripple_rounded_button"
        android:backgroundTint="@android:color/holo_green_light"
        android:drawableEnd="@drawable/ic_baseline_play_arrow"
        android:elevation="0dp"
        android:paddingStart="@dimen/defDimen"
        android:paddingEnd="@dimen/defDimen"
        android:text="@string/play"
        android:textAllCaps="false"
        android:textColor="@android:color/white" />

    <Button
        android:layout_width="120dp"
        android:layout_height="wrap_content"
        android:layout_gravity="center"
        android:layout_marginTop="@dimen/defDimen"
        android:background="@drawable/ripple_rounded_button"
        android:backgroundTint="@android:color/holo_red_dark"
        android:drawableEnd="@drawable/ic_baseline_stop"
        android:elevation="0dp"
        android:paddingStart="@dimen/defDimen"
        android:paddingEnd="@dimen/defDimen"
        android:text="@string/stop"
        android:textAllCaps="false"
        android:textColor="@android:color/white" />

    <Button
        android:layout_width="200dp"
        android:layout_height="wrap_content"
        android:layout_gravity="center"
        android:layout_marginTop="@dimen/defDimen"
        android:background="@drawable/ripple_rounded_stroke_button"
        android:elevation="0dp"
        android:text="@string/accept" />

    <Button
        android:layout_width="140dp"
        android:layout_height="wrap_content"
        android:layout_gravity="center"
        android:layout_marginTop="@dimen/defDimen"
        android:background="@drawable/ripple_rounded_stroke_button"
        android:backgroundTint="@android:color/holo_blue_dark"
        android:drawableStart="@drawable/ic_baseline_refresh"
        android:elevation="0dp"
        android:paddingStart="@dimen/defDimen"
        android:paddingEnd="@dimen/defDimen"
        android:text="@string/retry"
        android:textAllCaps="false" />

    <Button
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_gravity="center"
        android:layout_marginTop="@dimen/defDimen"
        android:background="@drawable/ripple_gradient_button"
        android:layout_marginStart="@dimen/largestDimen"
        android:layout_marginEnd="@dimen/largestDimen"
        android:text="@string/click_for_more"
        android:textColor="@android:color/white"/>
</LinearLayout>