<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".ui.fragment.notifications.snacks.SnackFragment">

    <com.google.android.material.appbar.AppBarLayout
        android:id="@+id/appBarLayout"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent">

        <androidx.appcompat.widget.Toolbar
            android:id="@+id/toolbar"
            android:layout_width="match_parent"
            android:layout_height="wrap_content" />
    </com.google.android.material.appbar.AppBarLayout>

    <Button
        android:id="@+id/btnError"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginStart="@dimen/defDimen"
        android:layout_marginTop="@dimen/halfDimen"
        android:layout_marginEnd="@dimen/defDimen"
        android:backgroundTint="@android:color/white"
        android:gravity="start|center_vertical"
        android:paddingStart="@dimen/defDimen"
        android:text="@string/error"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/appBarLayout" />

    <Button
        android:id="@+id/btnSuccess"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginStart="@dimen/defDimen"
        android:layout_marginTop="@dimen/halfDimen"
        android:layout_marginEnd="@dimen/defDimen"
        android:backgroundTint="@android:color/white"
        android:gravity="start|center_vertical"
        android:paddingStart="@dimen/defDimen"
        android:text="@string/success"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/btnError" />

    <Button
        android:id="@+id/btnInfo"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginStart="@dimen/defDimen"
        android:layout_marginTop="@dimen/halfDimen"
        android:layout_marginEnd="@dimen/defDimen"
        android:backgroundTint="@android:color/white"
        android:gravity="start|center_vertical"
        android:paddingStart="@dimen/defDimen"
        android:text="@string/info"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/btnSuccess" />

    <Button
        android:id="@+id/btnCenter"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginStart="@dimen/defDimen"
        android:layout_marginTop="@dimen/halfDimen"
        android:layout_marginEnd="@dimen/defDimen"
        android:backgroundTint="@android:color/white"
        android:gravity="start|center_vertical"
        android:paddingStart="@dimen/defDimen"
        android:text="@string/center"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/btnInfo" />

    <Button
        android:id="@+id/btnCustom"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginStart="@dimen/defDimen"
        android:layout_marginTop="@dimen/halfDimen"
        android:layout_marginEnd="@dimen/defDimen"
        android:backgroundTint="@android:color/white"
        android:gravity="start|center_vertical"
        android:paddingStart="@dimen/defDimen"
        android:text="@string/custom"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/btnCenter" />

</androidx.constraintlayout.widget.ConstraintLayout>